--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+* {
+  padding: 0;
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+}
+.nav-item a {
+  color: #fff;
+}
+
+.nav-item a:hover {
+  color:#2B50AA ;
+  background-color: #fff;
+  border-radius: 10%;
+}
+
+main {
+  background-color: #fff;
+}
+footer p, a {
+  background-color: #272727;
+  color: #fff;
+}
+h2 {
+  color: #2B50AA;
+}
 .carousel {
     margin-bottom: 4rem;
   }
