--- a/scss/custom.css
+++ b/scss/custom.css
@@ -97,6 +97,7 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  background-color: #272727;
 }
 
 hr {
@@ -2905,10 +2906,10 @@ textarea.form-control-lg {
 
 .btn-secondary {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #d42275;
-  --bs-btn-border-color: #ffffff;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #b41155;
+  --bs-btn-bg: #2B50AA;
+  --bs-btn-border-color: #2B50AA;
+  --bs-btn-hover-color: #2B50AA;
+  --bs-btn-hover-bg: #ffffff;
   --bs-btn-hover-border-color: #f1f4f7;
   --bs-btn-focus-shadow-rgb: 130, 138, 145;
   --bs-btn-active-color: #fff;
@@ -2955,14 +2956,14 @@ textarea.form-control-lg {
 }
 
 .btn-warning {
-  --bs-btn-color: #000;
-  --bs-btn-bg: #ffc107;
-  --bs-btn-border-color: #ffc107;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #ffca2c;
-  --bs-btn-hover-border-color: #ffc720;
+  --bs-btn-color: rgb(255, 255, 255);
+  --bs-btn-bg: #ff07c1;
+  --bs-btn-border-color: #ff078f;
+  --bs-btn-hover-color: rgb(252, 250, 250);
+  --bs-btn-hover-bg: #d30ca1;
+  --bs-btn-hover-border-color: #e520ff;
   --bs-btn-focus-shadow-rgb: 217, 164, 6;
-  --bs-btn-active-color: #000;
+  --bs-btn-active-color: rgb(252, 252, 252);
   --bs-btn-active-bg: #ffcd39;
   --bs-btn-active-border-color: #ffc720;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
