--- a/scss/custom.css
+++ b/scss/custom.css
@@ -2922,12 +2922,12 @@ textarea.form-control-lg {
 }
 
 .btn-success {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #198754;
-  --bs-btn-border-color: #198754;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #157347;
-  --bs-btn-hover-border-color: #146c43;
+  --bs-btn-color: #2B50AA;
+  --bs-btn-bg: #fff;
+  --bs-btn-border-color: #2B50AA;
+  --bs-btn-hover-color: rgb(253, 253, 253);
+  --bs-btn-hover-bg: #2B50AA;
+  --bs-btn-hover-border-color: #2B50AA;
   --bs-btn-focus-shadow-rgb: 60, 153, 110;
   --bs-btn-active-color: #fff;
   --bs-btn-active-bg: #146c43;
@@ -2957,11 +2957,11 @@ textarea.form-control-lg {
 
 .btn-warning {
   --bs-btn-color: rgb(255, 255, 255);
-  --bs-btn-bg: #ff07c1;
-  --bs-btn-border-color: #ff078f;
-  --bs-btn-hover-color: rgb(252, 250, 250);
-  --bs-btn-hover-bg: #d30ca1;
-  --bs-btn-hover-border-color: #e520ff;
+  --bs-btn-bg: #2B50AA;
+  --bs-btn-border-color: #2B50AA;
+  --bs-btn-hover-color:#2B50AA;
+  --bs-btn-hover-bg: #fff;
+  --bs-btn-hover-border-color: #2B50AA;
   --bs-btn-focus-shadow-rgb: 217, 164, 6;
   --bs-btn-active-color: rgb(252, 252, 252);
   --bs-btn-active-bg: #ffcd39;
